syntax = "proto3";

package HelloWord;

option csharp_namespace = "HelloWorld";

message Request {
    string name = 1;
}

message Response {
    string message = 1;
    
}

message ClientIdentifer {
    int32 id = 1;
    repeated int32 subscriptions = 2;
}

message DisconnectRequest {
    int32 id = 1;
}

message ServerMessage {
    int32 id = 1;
    string message = 2;
}

service Service {
    rpc Hello (Request) returns (Response);
    rpc Disconnect(DisconnectRequest) returns (Response);
    rpc ServerEvents (ClientIdentifer) returns (stream ServerMessage);
}
